# nova-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_nova_e2e_evolution_test.py  run_nova_evolution_test.py
.github/workflows/: test.yml
docs/skills/: nova-evolution-test.md
docs/specs/: nova-sota-pitch-trace.md  nova-sota-pitch.md
nova/: AGENTS.md  __init__.py  agent_loop.py  autonomous.py  brainstorm.py  events.py  implement.py  llmcore.py  main.py  scheduler.py  skill_parser.py
nova/assets/: tools_schema.json
nova/context/: AGENTS.md  __init__.py  system_prompt.py
nova/cron/: AGENTS.md  __init__.py  jobs.py  scheduler.py
nova/gateway/: AGENTS.md  __init__.py  dingtalk.py  discord.py  feishu.py  qq.py  telegram.py  webhook.py  wechat.py  wiki.py
nova/memory/: AGENTS.md  __init__.py  engine.py
nova/tools/: AGENTS.md  __init__.py  handler.py
nova/tui/: __init__.py  app.py
nova/tui/screens/: chat.py
nova/tui/styles/: theme.py
nova/tui/widgets/: chat_panel.py  dialog.py  input_bar.py  status_bar.py  tool_indicator.py
tests/: AGENTS.md  conftest.py  test_agent_loop.py  test_autonomous.py  test_brainstorm_implement.py  test_cron_jobs.py  test_e2e_bugfixes.py  test_evolution_loss.py  test_feedback_events.py  test_knowledge_links.py  test_llmcore.py  test_memory_engine.py  test_project_sync.py  test_session_integration.py  test_session_turns.py  test_skill_tools.py  test_system_prompt.py  test_tools_handler.py
